engine-net-2/examples/Errors/FilterErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	{{ [?[t\auto]\<class mc>] }}
}
